@@ -2,13 +2,16 @@ hockeypuck (1.0~a1) precise; urgency=low
 
   [ Casey Marshall ]
   * Opening 1.0~a1 development
+  * === added directory cmd/sks-hash, cmd/sks-hash/main.go,
+    pgp_types.go:
+    - Add SksDigest function, test utility. LP: #1176689
 
   [ Evan Broder ]
   * Makefile, mgo/client.go, mgo/worker.go:
     - Add support for subkey fingerprint query.
     - Use a symlink instead of rsync to satisfy build-deps.
 
- -- Casey Marshall <casey.marshall@gazzang.com>  Tue, 19 Mar 2013 23:25:42 -0500
+ -- Casey Marshall <casey.marshall@gmail.com>  Tue, 19 Mar 2013 23:25:42 -0500
 
 hockeypuck (0.9) precise; urgency=low
 
